<resources>
    <string name="app_name">My Calculator</string>
    <string name="result">Result</string>
    <string name="ac">AC</string>
    <string name="negative">+/-</string>
    <string name="Percent">%</string>
    <string name="division">/</string>
    <string name="multiply">*</string>
    <string name="add">+</string>
    <string name="sub">-</string>
    <string name="equal">=</string>
    <string name="num_1">1</string>
    <string name="num_2">2</string>
    <string name="num_3">3</string>
    <string name="num_4">4</string>
    <string name="num_5">5</string>
    <string name="num_6">6</string>
    <string name="num_7">7</string>
    <string name="num_8">8</string>
    <string name="num_9">9</string>
    <string name="num_0">0</string>
    <string name="num_P">.</string>
</resources>
